Project safe private Yield responses
